force-app/main/default/objects/Client_Setup_Sheet__c/Client_Setup_Sheet__c.object-meta.xml
<CustomObject>
    <label>Client Setup Sheet</label>
    <nameField>
        <label>Spiff Sheet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Client Setup Sheets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>