force-app/main/default/objects/Client_Setup_Sheet__c/fields/Abstrakt_Client_Services__c.field-meta.xml
<CustomField>
    <fullName>Abstrakt_Client_Services__c</fullName>
    <label>Abstrakt Client Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency Services (Excluding Inbound)</fullName>
            </value>
            <value>
                <fullName>Bionic SDR</fullName>
            </value>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Sapper</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Bionic Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>