force-app/main/default/objects/Client_Setup_Sheet__c/fields/Account_Manager_Notes__c.field-meta.xml
<CustomField>
    <fullName>Account_Manager_Notes__c</fullName>
    <label>Account Manager Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>