force-app/main/default/objects/Client_Setup_Sheet__c/fields/Accounting_Notes__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Notes__c</fullName>
    <label>Accounting Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>