force-app/main/default/objects/Client_Setup_Sheet__c/fields/Accounting_Processed_By__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Processed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Processed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets8</relationshipName>
    <type>Lookup</type>
</CustomField>