force-app/main/default/objects/Client_Setup_Sheet__c/fields/Accounting_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Processed_Date__c</fullName>
    <description>Triggered from a field update when Accounting Processed checkbox is checked.</description>
    <label>Accounting Processed Date</label>
    <type>Date</type>
</CustomField>