force-app/main/default/objects/Client_Setup_Sheet__c/fields/Accounting_Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Welcome_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to track when the billing department has sent the Accounting Welcome Email. Manually checked.</description>
    <label>Accounting Welcome Email Sent</label>
    <type>Checkbox</type>
</CustomField>