force-app/main/default/objects/Client_Setup_Sheet__c/fields/Added_to_Revenue_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Added_to_Revenue_Tracker__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Added to Revenue Tracker</label>
    <type>Checkbox</type>
</CustomField>