force-app/main/default/objects/Client_Setup_Sheet__c/fields/Additional_Implementation_Contact_1__c.field-meta.xml
<CustomField>
    <fullName>Additional_Implementation_Contact_1__c</fullName>
    <label>Additional Implementation Contact 1</label>
    <type>Email</type>
</CustomField>