force-app/main/default/objects/Client_Setup_Sheet__c/fields/Address1__c.field-meta.xml
<CustomField>
    <fullName>Address1__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Address</label>
    <type>Checkbox</type>
</CustomField>