force-app/main/default/objects/Client_Setup_Sheet__c/fields/Affiliated_Account__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Affiliated Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Client Setup Sheets (Affiliated Account)</relationshipLabel>
    <relationshipName>Client_Setup_Sheets2</relationshipName>
    <type>Lookup</type>
</CustomField>