force-app/main/default/objects/Client_Setup_Sheet__c/fields/Affiliated_with_a_Current_account__c.field-meta.xml
<CustomField>
    <fullName>Affiliated_with_a_Current_account__c</fullName>
    <label>Affiliated With a Current Account?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>