force-app/main/default/objects/Client_Setup_Sheet__c/fields/Allocations_Notification__c.field-meta.xml
<CustomField>
    <fullName>Allocations_Notification__c</fullName>
    <label>Allocations Notification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Relationship with Existing Client</fullName>
            </value>
            <value>
                <fullName>Upsell</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>