force-app/main/default/objects/Client_Setup_Sheet__c/fields/Appointment_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Guarantee__c</fullName>
    <label>Appointment Guarantee</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>