force-app/main/default/objects/Client_Setup_Sheet__c/fields/Appointment_Guarantee_Sapper__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Guarantee_Sapper__c</fullName>
    <label>Appointment Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No Guarantee</fullName>
            </value>
            <value>
                <fullName>1 Month Free</fullName>
            </value>
            <value>
                <fullName>Work For Free Until Hit</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>6 Months Free</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>