force-app/main/default/objects/Client_Setup_Sheet__c/fields/Appointment_Qualifiers__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Qualifiers__c</fullName>
    <label>Appointment Qualifiers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>