force-app/main/default/objects/Client_Setup_Sheet__c/fields/Appointment_Set_by_Inside_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>Appointment_Set_by_Inside_Sales_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment Set by Inside Sales Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Spiff_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>