force-app/main/default/objects/Client_Setup_Sheet__c/fields/Are_they_providing_a_list__c.field-meta.xml
<CustomField>
    <fullName>Are_they_providing_a_list__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Are they providing a list?</label>
    <type>Checkbox</type>
</CustomField>