force-app/main/default/objects/Client_Setup_Sheet__c/fields/Are_they_requesting_anything_special__c.field-meta.xml
<CustomField>
    <fullName>Are_they_requesting_anything_special__c</fullName>
    <inlineHelpText>Examples: They would like multiple email libraries and seek lists so they can focus in on specific niches separately OR we need to make a special process for how we pull lists and/or how we utilize our workflow</inlineHelpText>
    <label>Are they requesting anything special?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>