force-app/main/default/objects/Client_Setup_Sheet__c/fields/Artist__c.field-meta.xml
<CustomField>
    <fullName>Artist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Artist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets2</relationshipName>
    <type>Lookup</type>
</CustomField>