force-app/main/default/objects/Client_Setup_Sheet__c/fields/Artist_Notes__c.field-meta.xml
<CustomField>
    <fullName>Artist_Notes__c</fullName>
    <label>Artist Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>