force-app/main/default/objects/Client_Setup_Sheet__c/fields/Auto_Renewal_for_Workato__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_for_Workato__c</fullName>
    <formula>IF(OR(ISPICKVAL( Auto_Renewal_Picklist__c ,&apos;YES&apos;),ISPICKVAL( Auto_Renewal_Picklist__c ,&apos;Auto Renews after Pilot&apos;)),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Auto Renewal for Workato</label>
    <type>Checkbox</type>
</CustomField>