force-app/main/default/objects/Client_Setup_Sheet__c/fields/Auto_Renewal_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Picklist__c</fullName>
    <label>Auto-Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>AutoRenewalYes</fullName>
                <label>Auto Renews after Pilot</label>
            </value>
            <value>
                <fullName>AutoRenewalNo</fullName>
                <label>Does Not Auto Renew</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>