force-app/main/default/objects/Client_Setup_Sheet__c/fields/Billing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact__c</fullName>
    <label>Billing Contact</label>
    <type>TextArea</type>
</CustomField>