force-app/main/default/objects/Client_Setup_Sheet__c/fields/Billing_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_First_Name__c</fullName>
    <formula>If( CONTAINS( Billing_Contact__c , &quot; &quot;), LEFT( Billing_Contact__c ,FIND(&quot; &quot;, Billing_Contact__c  )), Billing_Contact__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact First Name</label>
    <type>Text</type>
</CustomField>