force-app/main/default/objects/Client_Setup_Sheet__c/fields/Billing_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Last_Name__c</fullName>
    <formula>If( CONTAINS(Billing_Contact__c , &quot; &quot;), MID( Billing_Contact__c , FIND(&quot; &quot;, Billing_Contact__c ), LEN(Billing_Contact__c )), null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Contact Last Name</label>
    <type>Text</type>
</CustomField>