force-app/main/default/objects/Client_Setup_Sheet__c/fields/Billing_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Billing_Contact_Phone__c</fullName>
    <label>Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>