force-app/main/default/objects/Client_Setup_Sheet__c/fields/Calendly__c.field-meta.xml
<CustomField>
    <fullName>Calendly__c</fullName>
    <label>Calendly</label>
    <type>TextArea</type>
</CustomField>