force-app/main/default/objects/Client_Setup_Sheet__c/fields/Call_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Call_Start_Date__c</fullName>
    <inlineHelpText>This is the date on which the calls will start</inlineHelpText>
    <label>Call Start Date</label>
    <type>Date</type>
</CustomField>