force-app/main/default/objects/Client_Setup_Sheet__c/fields/Can_Rescind_during_Implementation__c.field-meta.xml
<CustomField>
    <fullName>Can_Rescind_during_Implementation__c</fullName>
    <label>Can Rescind during Implementation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>