force-app/main/default/objects/Client_Setup_Sheet__c/fields/CC_Info_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>CC_Info_if_applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC Info (if applicable)</label>
    <type>Checkbox</type>
</CustomField>