force-app/main/default/objects/Client_Setup_Sheet__c/fields/Changes_Authorized_By__c.field-meta.xml
<CustomField>
    <fullName>Changes_Authorized_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Changes Authorized By:</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Client_Setup_Sheets6</relationshipName>
    <type>Lookup</type>
</CustomField>