force-app/main/default/objects/Client_Setup_Sheet__c/fields/Client_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Email__c</fullName>
    <label>Client Contact Email</label>
    <type>Email</type>
</CustomField>