force-app/main/default/objects/Client_Setup_Sheet__c/fields/Client_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Phone__c</fullName>
    <label>Client Contact Phone</label>
    <type>Phone</type>
</CustomField>