force-app/main/default/objects/Client_Setup_Sheet__c/fields/Client_Pushed__c.field-meta.xml
<CustomField>
    <fullName>Client_Pushed__c</fullName>
    <description>If the Original Contract Start Date field is not blank and the Original Contract Start Date value does not equal to the Contract start date, the checkbox is marked TRUE to indicate this client has pushed.</description>
    <formula>IF(AND(NOT(ISBLANK(Original_Contract_Start_Date__c)),Original_Contract_Start_Date__c&lt;&gt;Contract_Start_Date__c),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>If the Original Contract Start Date field is not blank and the Original Contract Start Date value does not equal to the Contract start date, the checkbox is marked TRUE to indicate this client has pushed.</inlineHelpText>
    <label>Client Pushed</label>
    <type>Checkbox</type>
</CustomField>