force-app/main/default/objects/Client_Setup_Sheet__c/fields/Combined_Program__c.field-meta.xml
<CustomField>
    <fullName>Combined_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Inbound and Outbound programs that share the same start date</inlineHelpText>
    <label>Combined Program</label>
    <type>Checkbox</type>
</CustomField>