force-app/main/default/objects/Client_Setup_Sheet__c/fields/Commission_Splits__c.field-meta.xml
<CustomField>
    <fullName>Commission_Splits__c</fullName>
    <label>Commission Splits</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>