force-app/main/default/objects/Client_Setup_Sheet__c/fields/Company_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Address__c</fullName>
    <label>Mailing Address</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>