force-app/main/default/objects/Client_Setup_Sheet__c/fields/Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup Company Name in Opportunity</inlineHelpText>
    <label>Company Name</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Spiff_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>