force-app/main/default/objects/Client_Setup_Sheet__c/fields/Contract_Out_Clause__c.field-meta.xml
<CustomField>
    <fullName>Contract_Out_Clause__c</fullName>
    <label>Contract Out Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Day Out</fullName>
            </value>
            <value>
                <fullName>45-Day Out</fullName>
            </value>
            <value>
                <fullName>Annual Lock-In</fullName>
            </value>
            <value>
                <fullName>Annual Lock-In – 6 Month Out</fullName>
            </value>
            <value>
                <fullName>45 Day Out</fullName>
            </value>
            <value>
                <fullName>Full Term Lock</fullName>
            </value>
            <value>
                <fullName>Annual Lock-In with 6 Months Live, No Guarantee 45-Day Out</fullName>
                <isActive>false</isActive>
                <label>Annual Lock-In with 6 Months Live, No Guarantee 45-Day Out</label>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>