force-app/main/default/objects/Client_Setup_Sheet__c/fields/Contract_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_Date__c</fullName>
    <description>Date the Contract was signed</description>
    <label>Contract Signed Date</label>
    <type>Date</type>
</CustomField>