force-app/main/default/objects/Client_Setup_Sheet__c/fields/Contract_Verbiage_Adjustments__c.field-meta.xml
<CustomField>
    <fullName>Contract_Verbiage_Adjustments__c</fullName>
    <label>Contract Verbiage Adjustments</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>