force-app/main/default/objects/Client_Setup_Sheet__c/fields/Department__c.field-meta.xml
<CustomField>
    <fullName>Department__c</fullName>
    <label>Department</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Inbound</fullName>
            </value>
            <value>
                <fullName>Outbound</fullName>
            </value>
            <value>
                <fullName>Sapper</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Automotive</fullName>
                <isActive>false</isActive>
                <label>Automotive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>