force-app/main/default/objects/Client_Setup_Sheet__c/fields/Developer_Notes__c.field-meta.xml
<CustomField>
    <fullName>Developer_Notes__c</fullName>
    <label>Developer Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>