force-app/main/default/objects/Client_Setup_Sheet__c/fields/Dial_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Dial_Guarantee__c</fullName>
    <label>Dial Guarantee</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>