force-app/main/default/objects/Client_Setup_Sheet__c/fields/Discount_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Discount_Picklist__c</fullName>
    <label>Discount</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Yes_No</valueSetName>
    </valueSet>
</CustomField>