force-app/main/default/objects/Client_Setup_Sheet__c/fields/Discount_Type__c.field-meta.xml
<CustomField>
    <fullName>Discount_Type__c</fullName>
    <label>Discount Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Annual No Cancel</fullName>
            </value>
            <value>
                <fullName>Annual True-Up</fullName>
            </value>
            <value>
                <fullName>Multi-Program</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Paid in Full</fullName>
            </value>
            <value>
                <fullName>Signing Discount</fullName>
            </value>
            <value>
                <fullName>12 Month No Cancel</fullName>
                <isActive>false</isActive>
                <label>12 Month No Cancel</label>
            </value>
            <value>
                <fullName>6 Month No Cancel</fullName>
                <isActive>false</isActive>
                <label>6 Month No Cancel</label>
            </value>
            <value>
                <fullName>Annual No Cancel &amp; Multi-Program</fullName>
                <isActive>false</isActive>
                <label>Annual No Cancel &amp; Multi-Program</label>
            </value>
            <value>
                <fullName>Annual No Cancel (4 Month Review)</fullName>
                <isActive>false</isActive>
                <label>Annual No Cancel (4 Month Review)</label>
            </value>
            <value>
                <fullName>Annual No Cancel (7 Month Review)</fullName>
                <isActive>false</isActive>
                <label>Annual No Cancel (7 Month Review)</label>
            </value>
            <value>
                <fullName>Annual No Cancel (7 Month Review) &amp; Multi-Program</fullName>
                <isActive>false</isActive>
                <label>Annual No Cancel (7 Month Review) &amp; Multi-Program</label>
            </value>
            <value>
                <fullName>Annual True-Up &amp; Multi-Program</fullName>
                <isActive>false</isActive>
                <label>Annual True-Up &amp; Multi-Program</label>
            </value>
            <value>
                <fullName>General Discount (Other)</fullName>
                <isActive>false</isActive>
                <label>General Discount (Other)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>