force-app/main/default/objects/Client_Setup_Sheet__c/fields/Discount_Wording_from_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Discount_Wording_from_Agreement__c</fullName>
    <label>Discount Wording from Agreement</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>