force-app/main/default/objects/Client_Setup_Sheet__c/fields/Distributed_Internally__c.field-meta.xml
<CustomField>
    <fullName>Distributed_Internally__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributed Internally</label>
    <type>Checkbox</type>
</CustomField>