force-app/main/default/objects/Client_Setup_Sheet__c/fields/Distributed_to_Client__c.field-meta.xml
<CustomField>
    <fullName>Distributed_to_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Distributed to Client</label>
    <type>Checkbox</type>
</CustomField>