force-app/main/default/objects/Client_Setup_Sheet__c/fields/Do_they_understand_what_they_are_buying__c.field-meta.xml
<CustomField>
    <fullName>Do_they_understand_what_they_are_buying__c</fullName>
    <inlineHelpText>Do they understand that we are building a sales pipeline and the benefit of our program initially is to collect data, stay in touch and ultimately set up appointments that will lead to sales for them?</inlineHelpText>
    <label>Do they understand what they are buying?</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>