force-app/main/default/objects/Client_Setup_Sheet__c/fields/DOB__c.field-meta.xml
<CustomField>
    <fullName>DOB__c</fullName>
    <label>DOB</label>
    <type>TextArea</type>
</CustomField>