force-app/main/default/objects/Client_Setup_Sheet__c/fields/Does_Client_have_Approved_Audit__c.field-meta.xml
<CustomField>
    <fullName>Does_Client_have_Approved_Audit__c</fullName>
    <label>Does Client have Approved Audit?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>