force-app/main/default/objects/Client_Setup_Sheet__c/fields/Early_Email_Blast_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Early_Email_Blast_Campaign__c</fullName>
    <inlineHelpText>Was early email blast used a closing tactic to get the client to sign before the 15th?</inlineHelpText>
    <label>Client Must Approve Content</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>