force-app/main/default/objects/Client_Setup_Sheet__c/fields/Email_Marketing_POC__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_POC__c</fullName>
    <inlineHelpText>This is the full name of the person we are sending from at the Client&apos;s company. This needs to be a real person.</inlineHelpText>
    <label>Email Marketing POC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>