force-app/main/default/objects/Client_Setup_Sheet__c/fields/Email_Marketing_POC_Title__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_POC_Title__c</fullName>
    <inlineHelpText>This is the title of the person we are sending from. Ideally we want an Owner, C-Level, President, VP. Avoid VP of Sales/Marketing since it generates less results</inlineHelpText>
    <label>Email Marketing POC Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>