force-app/main/default/objects/Client_Setup_Sheet__c/fields/Email_Marketing_Program__c.field-meta.xml
<CustomField>
    <fullName>Email_Marketing_Program__c</fullName>
    <label>Email Marketing Program</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active Campaign</fullName>
            </value>
            <value>
                <fullName>Opt-Out</fullName>
            </value>
            <value>
                <fullName>Opt-In</fullName>
            </value>
            <value>
                <fullName>No Campaign</fullName>
            </value>
            <value>
                <fullName>Set-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>