force-app/main/default/objects/Client_Setup_Sheet__c/fields/Exclusivity__c.field-meta.xml
<CustomField>
    <fullName>Exclusivity__c</fullName>
    <label>Exclusivity</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Metro Exclusivity</fullName>
            </value>
            <value>
                <fullName>State Exclusivity</fullName>
            </value>
            <value>
                <fullName>List Exclusivity</fullName>
            </value>
            <value>
                <fullName>Other Exclusivity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>